--- a/src/main/java/fit/wenchao/mycrawler/ui/my-crawler-frontend/.env.production
+++ b/src/main/java/fit/wenchao/mycrawler/ui/my-crawler-frontend/.env.production
@@ -2,5 +2,7 @@
 ENV = 'production'
 
 # base api
-VUE_APP_BASE_API = '/prod-api'
+VUE_APP_HOST='49.232.155.160'
+VUE_APP_POST='40001'
+VUE_APP_BASE_API = 'http://${VUE_APP_HOST}:${VUE_APP_POST}/'
 
